--- a/CreateFromExistingSidebar.html
+++ b/CreateFromExistingSidebar.html
@@ -85,12 +85,12 @@
     </tr>
     <tr>
       <td>
-        <label style="cursor:help" title="Select the range of timetable (to be fill up regularly).">Timetable: </label>
+        <label style="cursor:help" title="Select the range of timeslot (to be fill up regularly).">Timetable: </label>
       </td>
       <td colspan="2">
         <div class="block form-group">
-          <input type="text" id="sidebar-fillup-timetable-range" placeholder="Range" value="" style="width:10em;margin-top:1px;">
-          <button class="narrow-button" title="Use selected range" onclick="utils.updateRange('sidebar-fillup-timetable-range', '');">↘</button>
+          <input type="text" id="sidebar-fillup-timeslot-range" placeholder="Range" value="" style="width:10em;margin-top:1px;">
+          <button class="narrow-button" title="Use selected range" onclick="utils.updateRange('sidebar-fillup-timeslot-range', '');">↘</button>
         </div>
       </td>
     </tr>
